--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -1,6 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
 	
-<h1>hello world</h1>
+
+<br/>
+{% if api %}
+	{% if api == "Error..." %}
+		there was an error, please try again...
+	{% else %}
+
+
+<div class="jumbotron">
+  <h1 class="display-4">{{ api.0.Category.Name }}</h1>
+  <p class="lead">Current {{ api.0.ReportingArea }} Air Quality:{{ api.0.AQI }}</p>
+  
+  
+</div>
+
+	
+		
+	{% endif %}
+{% endif %}
+
 
 {% endblock %}
