--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -3,23 +3,32 @@
 	
 
 <br/>
+
+{% if zipcode %}
+ 	{{ zipcode }}
+{% endif %}	 	
+
+
 {% if api %}
 	{% if api == "Error..." %}
 		there was an error, please try again...
 	{% else %}
 
 
-<div class="jumbotron">
+<div class="jumbotron veryunhealthy {{ category_color }}">
   <h1 class="display-4">{{ api.0.Category.Name }}</h1>
   <p class="lead">Current {{ api.0.ReportingArea }} Air Quality:{{ api.0.AQI }}</p>
-  
+
+  <p>{{ category_description }}</p>
+
   
 </div>
 
-	
+	 
 		
+	
 	{% endif %}
-{% endif %}
+{% endif %}	
 
 
 {% endblock %}
